--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,17 @@
     ],
     "name": "hexlet/code",
     "autoload": {
+        "files": ["src/Cli.php"],
         "psr-4": {
             "Hexlet\\Code\\": "src/"
         }
     },
-    "require": {},
+    "require": {
+        "wp-cli/php-cli-tools": "^0.12.1"
+    },
     "description": "hexlet project",
     "license": "proprietary"
+    
+
+    
 }
